# LearnOpenGL

./: .gitignore  README.md
src/: CMakeLists.txt  glad.c  glad.h  main-2d.c  main.c
